[gd_scene load_steps=23 format=3 uid="uid://xcjrjq5cbn7y"]

[ext_resource type="Script" path="res://Player.gd" id="1_2v3wm"]
[ext_resource type="PackedScene" uid="uid://cf1dcxwv6bvl3" path="res://models/Pistol.glb" id="2_4esil"]
[ext_resource type="Texture2D" uid="uid://cq3gcy12hn2mk" path="res://addons/kenney_prototype_textures/red/texture_01.png" id="2_pug76"]
[ext_resource type="Texture2D" uid="uid://vwob30tkwej4" path="res://addons/kenney_particle_pack/star_06.png" id="3_27dhu"]
[ext_resource type="AudioStream" uid="uid://bdynl3f5bed88" path="res://male_hurt.mp3" id="4_uv2i1"]
[ext_resource type="AudioStream" uid="uid://cgs4ga4ivucsh" path="res://bullet.mp3" id="4_w2ub2"]
[ext_resource type="Texture2D" uid="uid://8ka2ui7sq36p" path="res://addons/kenney_particle_pack/circle_05.png" id="6_modmv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bcxmd"]
albedo_texture = ExtResource("2_pug76")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_xk8km"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_67y6s"]

[sub_resource type="Gradient" id="Gradient_cfnn0"]
offsets = PackedFloat32Array(0, 0.141221, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_is51c"]
gradient = SubResource("Gradient_cfnn0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_uu53b"]
angle_min = 45.0
angle_max = 45.0
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_is51c")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4smqo"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(1, 0.960784, 0.670588, 1)
albedo_texture = ExtResource("3_27dhu")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="PlaneMesh" id="PlaneMesh_b2g4i"]
material = SubResource("StandardMaterial3D_4smqo")
size = Vector2(0.5, 0.5)
orientation = 2

[sub_resource type="Animation" id="Animation_jhgv2"]
length = 0.001

[sub_resource type="Animation" id="Animation_knepc"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5), Vector3(0.5, -0.284894, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/Pistol:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.122103, 0, 0)]
}

[sub_resource type="Animation" id="Animation_qcgne"]
resource_name = "move"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 2),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5), Vector3(0.455732, -0.215424, -0.5), Vector3(0.5, -0.25, -0.5), Vector3(0.55565, -0.198737, -0.5)]
}

[sub_resource type="Animation" id="Animation_efeb8"]
resource_name = "shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0.5, -0.185618, -0.5), Vector3(0.5, -0.25, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/Pistol:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0.454152, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p6wdk"]
_data = {
"RESET": SubResource("Animation_jhgv2"),
"idle": SubResource("Animation_knepc"),
"move": SubResource("Animation_qcgne"),
"shoot": SubResource("Animation_efeb8")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_hn37q"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Camera3D:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1

[sub_resource type="BoxMesh" id="BoxMesh_gf5qo"]
size = Vector3(0.72, 0.57, 0.2)

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_2v3wm")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
material_override = SubResource("StandardMaterial3D_bcxmd")
mesh = SubResource("CapsuleMesh_xk8km")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_67y6s")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.51306, 0)

[node name="Pistol" parent="Camera3D" instance=ExtResource("2_4esil")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.25, -0.5)

[node name="MuzzleFlash" type="GPUParticles3D" parent="Camera3D/Pistol"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0588368, -0.313209)
emitting = false
amount = 1
lifetime = 0.25
one_shot = true
local_coords = true
process_material = SubResource("ParticleProcessMaterial_uu53b")
draw_pass_1 = SubResource("PlaneMesh_b2g4i")

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -50)
collision_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p6wdk")
}
autoplay = "idle"
playback_default_blend_time = 0.05

[node name="HitSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_uv2i1")

[node name="BulletSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_w2ub2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Settings" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -173.0
offset_top = -95.5
offset_right = 173.0
offset_bottom = 95.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Settings"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label2" type="Label" parent="CanvasLayer/Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="CanvasLayer/Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sensitivity"
vertical_alignment = 1

[node name="HScrollBar" type="HScrollBar" parent="CanvasLayer/Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 0.01
max_value = 1.0
value = 1.0

[node name="Label4" type="Label" parent="CanvasLayer/Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Music"
vertical_alignment = 1

[node name="CheckBox" type="CheckBox" parent="CanvasLayer/Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ON / OFF"

[node name="QuitButton" type="Button" parent="CanvasLayer/Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "QUIT"

[node name="HUD" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HUD"]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.99994
offset_top = -7.99997
offset_right = 504.0
offset_bottom = 504.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.03, 0.03)
texture = ExtResource("6_modmv")
stretch_mode = 5

[node name="KillCountText" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 0
offset_left = 1099.0
offset_top = 14.0
offset_right = 1139.0
offset_bottom = 37.0

[node name="PlayerName" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 0
offset_left = 12.0
offset_top = 11.0
offset_right = 66.0
offset_bottom = 34.0

[node name="Death" type="Control" parent="CanvasLayer/HUD"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DeathMessage" type="Label" parent="CanvasLayer/HUD/Death"]
layout_mode = 0
offset_left = 534.0
offset_top = 122.0
offset_right = 642.0
offset_bottom = 145.0
text = "You are Dead "
uppercase = true

[node name="RespawnButton" type="Button" parent="CanvasLayer/HUD/Death"]
layout_mode = 0
offset_left = 509.0
offset_top = 504.0
offset_right = 664.0
offset_bottom = 559.0
text = "Respawn"

[node name="mags" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -27.0
offset_right = -6.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0

[node name="bullet" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 18.0
grow_vertical = 0

[node name="RespawnTimer" type="Timer" parent="."]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_hn37q")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.51, -0.22)
mesh = SubResource("BoxMesh_gf5qo")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="value_changed" from="CanvasLayer/Settings/MarginContainer/VBoxContainer/HScrollBar" to="." method="_on_h_scroll_bar_value_changed"]
[connection signal="pressed" from="CanvasLayer/Settings/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]

[editable path="Camera3D/Pistol"]
